--- a/second/index.html
+++ b/second/index.html
@@ -9,6 +9,7 @@
     <title>eShop</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="chat.css">
 </head>
 
 <body>
@@ -32,6 +33,7 @@
         </div>
     </main>
     <script src="index.js"></script>
+    <script src="chat.js"></script>
 </body>
 
 </html>
