added smiles and attach btns

--- a/second/index.html
+++ b/second/index.html
@@ -66,6 +66,44 @@
                     <form action="#" class="form">
                         <textarea autofocus rows="3" cols="30" class="message-box" name="message"
                             placeholder="Введите сообщение и нажмите Enter"></textarea>
+                        <div class="chat-buttons">
+                            <button class="smile-button">
+                                <?xml version="1.0" ?><svg width="20" height="20" data-name="smile" id="smile"
+                                    viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                                    <defs>
+                                        <style>
+                                            .cls-1,
+                                            .cls-2 {
+                                                fill: none;
+                                                stroke: #231f20;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 2px;
+                                            }
+
+                                            .cls-2 {
+                                                stroke-linecap: round;
+                                            }
+
+                                            .cls-3 {
+                                                fill: #231f20;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <title />
+                                    <circle class="cls-1" cx="24" cy="24" r="23" />
+                                    <path class="cls-2" d="M14,33s8.83,9.33,20,0" />
+                                    <ellipse class="cls-3" cx="17" cy="19" rx="3" ry="4" />
+                                    <ellipse class="cls-3" cx="31" cy="19" rx="3" ry="4" />
+                                </svg>
+                            </button>
+                            <button class="attach-button">
+                                <?xml version="1.0" ?><svg id="attach" height="20" viewBox="0 0 48 48" width="20"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M33 12v23c0 4.42-3.58 8-8 8s-8-3.58-8-8v-25c0-2.76 2.24-5 5-5s5 2.24 5 5v21c0 1.1-.89 2-2 2-1.11 0-2-.9-2-2v-19h-3v19c0 2.76 2.24 5 5 5s5-2.24 5-5v-21c0-4.42-3.58-8-8-8s-8 3.58-8 8v25c0 6.08 4.93 11 11 11s11-4.92 11-11v-23h-3z" />
+                                    <path d="M0 0h48v48h-48z" fill="none" /></svg>
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
