--- a/second/index.html
+++ b/second/index.html
@@ -68,7 +68,7 @@
                             placeholder="Введите сообщение и нажмите Enter"></textarea>
                         <div class="chat-buttons">
                             <button class="smile-button">
-                                <?xml version="1.0" ?><svg width="20" height="20" data-name="smile" id="smile"
+                                <?xml version="1.0" ?><svg width="20" height="20" data-name="smile" class="smile-icon"
                                     viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                                     <defs>
                                         <style>
@@ -97,7 +97,7 @@
                                 </svg>
                             </button>
                             <button class="attach-button">
-                                <?xml version="1.0" ?><svg id="attach" height="20" viewBox="0 0 48 48" width="20"
+                                <?xml version="1.0" ?><svg class="attach-icon" height="20" viewBox="0 0 48 48" width="20"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M33 12v23c0 4.42-3.58 8-8 8s-8-3.58-8-8v-25c0-2.76 2.24-5 5-5s5 2.24 5 5v21c0 1.1-.89 2-2 2-1.11 0-2-.9-2-2v-19h-3v19c0 2.76 2.24 5 5 5s5-2.24 5-5v-21c0-4.42-3.58-8-8-8s-8 3.58-8 8v25c0 6.08 4.93 11 11 11s11-4.92 11-11v-23h-3z" />
