--- a/regex/index.html
+++ b/regex/index.html
@@ -3,56 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Regex</title>
-    <style>
-        .input-form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 50px;
-        }
-        .input-container {
-            display: flex;
-            justify-content: space-around;
-        }
-        .input-container label {
-            padding-right: 10px;
-        }
-
-        .invalid {
-            display: block;
-            color: red;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p class="text">Lorem ipsu'm dolor sit amet, 'consectetur adipisicing elit'. 'Ad adipisci autem culpa' cum dolorem ex illo inventore, maxime quis quo repellendus, 'repudiandae sed ullam' unde ut velit vitae! Ab, adipisci.</p>
     <button class="filter-quotes">filter</button>
     <form class="input-form" action="#">
         <div class="input-container">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" >
+            <label for="name" class="form-label">Name</label>
+            <input type="text" id="name" name="name" class="input-line" placeholder="Input your name">
         </div>
         <div class="input-container">
-            <label for="phone">Phone</label>
-            <input type="text" id="phone" name="phone">
+            <label for="phone" class="form-label">Phone</label>
+            <input type="text" id="phone" name="phone" class="input-line" placeholder="Input your phone">
         </div>
         <div class="input-container">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" id="email" name="email" class="input-line" placeholder="Input your email">
         </div>
         <button type="submit" class="submit">Submit</button>
     </form>
-
-
     <script src="index.js"></script>
-    <script>
-        const form = document.querySelector('.input-form');
-
-        form.addEventListener('submit', (e) => {
-            e.preventDefault();
-            new FormValidator(form);
-        })
-    </script>
 </body>
 </html>
