--- a/fifth/index.html
+++ b/fifth/index.html
@@ -17,16 +17,30 @@
         <input type="text" class="search-input" v-model="searchLine">
         <button class="search-button" @click="filters">Искать</button>
       </form>
-      <button class="cart-button">Корзина</button>
+      <div class="cart-block">
+        <button class="cart-button" @click="showCart(itemCart)">Корзина</button>
+        <div class="cart" v-show="visibility">
+          <div class="empty" v-if="itemCart.products.length === 0">Ваша корзина пуста. Скорее приступайте к покупкам!</div>
+          <div class="cart-item" v-else v-for="good in itemCart.products">
+            <h3 class="good_title">{{ good.product_name }}</h3>
+            <p class="good_price">{{ good.price }}</p>
+            <button class="goods-dec" @click="decCount(good)">-</button>
+            <span class="goods-count">{{ good.count }}</span>
+            <button class="goods-inc" @click="incCount(good)">+</button>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
-  <div class="goods-list">
-    <div class="goods-item" v-for="good in filteredGoods" :key="good.id_product">
-      <h3>{{ good.product_name }}</h3>
-      <p>{{ good.price }}</p>
-    </div>
-  </div>
   <main>
+    <div class="goods-list">
+      <div v-if="filteredGoods.length === 0 ">Нет данных.</div>
+      <div class="goods-item" v-else v-for="good in filteredGoods" :key="good.id_product">
+        <h3 class="good_title">{{ good.product_name }}</h3>
+        <p class="good_price">{{ good.price }}</p>
+        <button class="goods-button" @click="addProduct(good)">Купить</button>
+      </div>
+    </div>
   </main>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
